@@ -16,12 +16,10 @@
 
 package org.gradle.integtests.samples
 
-import org.gradle.api.JavaVersion
+
 import org.gradle.integtests.fixtures.AbstractIntegrationSpec
 import org.gradle.integtests.fixtures.DefaultTestExecutionResult
 import org.gradle.integtests.fixtures.Sample
-import org.gradle.integtests.fixtures.ZincScalaCompileFixture
-import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.test.fixtures.file.TestFile
 import org.gradle.test.precondition.Requires
 import org.gradle.test.preconditions.UnitTestPreconditions
@@ -33,7 +31,6 @@ import static org.hamcrest.CoreMatchers.containsString
 class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationSpec {
 
     @Rule public final Sample sample = new Sample(testDirectoryProvider, 'scala/mixedJavaAndScala')
-    @Rule public final ZincScalaCompileFixture zincScalaCompileFixture = new ZincScalaCompileFixture(executer, testDirectoryProvider)
 
     def setup() {
         executer.withRepositoryMirrors()
@@ -43,9 +40,11 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationSpec {
         TestFile projectDir = sample.dir.file('groovy')
 
         // Build and test projects
+        when:
         executer.inDirectory(projectDir).withTasks('clean', 'build').run()
 
         // Check tests have run
+        then:
         def result = new DefaultTestExecutionResult(projectDir)
         result.assertTestClassesExecuted('org.gradle.sample.PersonSpec')
 
@@ -63,16 +62,12 @@ class SamplesMixedJavaAndScalaIntegrationTest extends AbstractIntegrationSpec {
     }
 
     def "can build docs"() {
-        if (GradleContextualExecuter.isDaemon()) {
-            // don't load scala into the daemon as it exhausts permgen
-            return
-        } else if (!GradleContextualExecuter.isEmbedded() && !GradleContextualExecuter.isParallel() && !JavaVersion.current().isJava8Compatible()) {
-            executer.withBuildJvmOpts('-XX:MaxPermSize=128m')
-        }
-
         TestFile projectDir = sample.dir.file('groovy')
+
+        when:
         executer.inDirectory(projectDir).withTasks('clean', 'javadoc', 'scaladoc').run()
 
+        then:
         TestFile javadocsDir = projectDir.file("build/docs/javadoc")
         javadocsDir.file("index.html").assertIsFile()
         javadocsDir.file("index.html").assertContents(containsString('mixed-java-and-scala 1.0 API'))
